monitoring/4.ingress/ingress-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.frontend.redirect.permanent: 'true'
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: grafana.k3s.shpaq.org
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: http
        path: /
  tls:
  - secretName: grafana-k3s-shpaq-org-tls
    hosts:
      - grafana.k3s.shpaq.org
